Ендпоінт завершених проєктів (save-art + art-ua-info) та автозавершення візарда art-ua-info
Проєкти art-ua-info не потрапляли в /my/projects (окреме джерело) і не мали
способу з'явитись у кабінеті власника. Додано GET /my/projects/completed,
що показує завершені (completed/sold) проєкти з обох джерел, а фінальне
збереження з візарда art-ua-info тепер одразу переводить проєкт у
completed/approved (чернетки new/draft лишаються без змін).
